infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: stocksense
  labels:
    app: stocksense
